# distill

./: .actrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 44e4dc020b12_create_summaries_table.py  ae6f4c33ef5c_add_length_and_format_to_summaries.py
app/: config.py  database.py  dependencies.py  logger.py  main.py  middleware.py
app/models/: summary.py
app/repositories/: summary.py
app/routes/: health.py  summarize.py
app/schemas/: summary.py
app/services/: ollama.py  scraper.py
app/utils/: export.py  pagination.py
tests/: conftest.py
tests/repositories/: test_summary.py
tests/routes/: test_health.py  test_summarize.py
tests/services/: test_ollama.py  test_scraper.py
tests/utils/: test_export.py  test_pagination.py
