[project]
name = "distill"
version = "0.1.0"
description = "URL summarizer API powered by a local LLM via Ollama"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.15.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.50",
    "python-dotenv>=1.2.2",
    "alembic>=1.18.4",
    "structlog>=26.1.0",
    "slowapi>=0.1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "commitizen>=4.16.3",
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:slowapi",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes (unused imports, undefined names, …)
    "I",  # isort (import ordering)
    "UP", # pyupgrade (modern Python syntax)
]
